--- a/wxcloudrun/templates/index/index.html
+++ b/wxcloudrun/templates/index/index.html
@@ -3,29 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YMA内部OA平台</title>
+    <title>任务管理</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        body {
-            padding-top: 50px;
-        }
-        .container {
-            max-width: 600px;
-            text-align: center;
-        }
-        .btn-custom {
-            margin-top: 20px;
-        }
-    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">YMA内部OA平台</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">YMA内部OA平台</a>
     </nav>
-    <div class="container">
-        <h1 class="mt-5">YMA内部OA平台</h1>
-        <p>欢迎使用YMA内部OA平台</p>
-        <a href="/task-management" class="btn btn-primary btn-custom">任务管理</a>
+    <div class="container mt-5">
+        <h1>任务管理</h1>
+        <a href="/create-task" class="btn btn-primary btn-block">创建任务</a>
+        <a href="/task-list" class="btn btn-secondary btn-block">任务列表</a>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
